# VGE_RT

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  VGE_projekt_prezentace.pptx  aabb.h  acc_bbox.h  acc_bvh.h  acc_kdtree.h  accel.h  camera.h  defines.h  film.h  main.cpp  mesh.h  poly.h  program.h  ray.h  renderer.h  scene.h  transform.h  vec.h  window.cpp  window.h
src/: aabb.h  acc_bbox.h  acc_bih.cpp  acc_bih.h  acc_bvh.cpp  acc_bvh.h  acc_kdtree.cpp  acc_kdtree.h  acc_none.h  accel.h  camera.h  defines.h  film.h  main.cpp  mesh.h  poly.h  program.h  ray.h  renderer.h  rng.h  scene.h  transform.h  vec.h  window.h
